--- a/backend/package.json
+++ b/backend/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.3",
-    "mongoose": "^8.2.0"
+    "mongoose": "^8.2.0",
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
     "dotenv": "^16.4.5",
